force-app/main/default/objects/MessagingSession/fields/Has_related_case__c.field-meta.xml
<CustomField>
    <fullName>Has_related_case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has related case</label>
    <type>Checkbox</type>
</CustomField>