force-app/main/default/objects/MessagingSession/fields/IsGraspCustomerId__c.field-meta.xml
<CustomField>
    <fullName>IsGraspCustomerId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGraspCustomerId</label>
    <type>Checkbox</type>
</CustomField>