force-app/main/default/objects/MessagingSession/fields/Prechat_Values__c.field-meta.xml
<CustomField>
    <fullName>Prechat_Values__c</fullName>
    <label>Prechat Values</label>
    <type>TextArea</type>
</CustomField>