force-app/main/default/objects/MessagingSession/fields/Sw_Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Sw_Case_Subject__c</fullName>
    <description>This field is used to store case subject</description>
    <label>Case Subject</label>
    <type>TextArea</type>
</CustomField>