force-app/main/default/objects/MessagingSession/fields/Sw_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Sw_Contact_Email__c</fullName>
    <label>Contact Email</label>
    <length>60</length>
    <type>Text</type>
</CustomField>