force-app/main/default/objects/MessagingSession/fields/Sw_Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Sw_Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>