force-app/main/default/objects/MessagingSession/listViews/Sw_Agentforce_Fallback_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Sw_Agentforce_Fallback_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Sw Agentforce Fallback Queue</label>
    <queue>Sw_Agentforce_Fallback_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>